# django-request-id

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.rst  Taskfile.yaml  demo.py  pyproject.toml
.github/workflows/: publish.yml
django-keycloak/: .travis.yml  README.rst  Taskfile.yaml  docker-compose.yml  pyproject.toml  setup.py  sonar-project.properties
django-keycloak/.github/workflows/: linty.yml
django-keycloak/django_keycloak/: __init__.py  app_settings.py  apps.py  conf.py  middleware.py  models.py  response.py  urls.py  views.py
django-keycloak/django_keycloak/auth/: backends.py
django-keycloak/django_keycloak/management/commands/: keycloak_check.py  keycloak_refresh_realm.py
django-keycloak/django_keycloak/migrations/: 0001_initial.py
django-keycloak/django_keycloak/services/: client.py  exceptions.py  oidc_profile.py
django-keycloak/example/keycloak/: Dockerfile
django-keycloak/example/resource-provider/: Dockerfile  manage.py  pyproject.toml  requirements.txt
django-keycloak/example/resource-provider-api/: Dockerfile
django-keycloak/keycloak_tests/: conftest.py  settings.py  test_backends.py  test_conf.py  test_middleware.py  test_oidc_profile.py  test_views.py  urls.py
django-request-id/: AUTHORS.rst  Taskfile.yaml  demo.py
django-request-id/docs/: Makefile  make.bat
django-request-id/tests/: urls.py
django-request-id/tests/templates/: base.html
docs/: index.rst
example/resource-provider-api/: pyproject.toml
example/resource-provider-api/myapp/: urls.py
example/resource-provider/myapp/: urls.py
request_id/: __init__.py  apps.py  asgi.py  conf.py  defaults.py  local.py  logging.py  middleware.py  wsgi.py
request_id/templatetags/: request_id.py
tests/: settings.py  test_request_id.py  urls.py
