[project]
name = "django-keycloak"
version = "1.0.0a2"
description = "Async-aware Django integration for Keycloak (Redshred fork of skamansam/django-keycloak)"
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Peter Slump", email = "peter@yarf.nl" },
    { name = "Ahmad Dabo", email = "dabo.cs@gmail.com" },
    { name = "Samuel C. Tyler", email = "skamansam@gmail.com" },
]
maintainers = [
    { name = "Adam Huganir", email = "adam@redshred.com" },
]
keywords = ["django", "keycloak", "auth", "async", "asgi", "oidc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=5.1",
    "aiohttp>=3.10",
    "python-jose[cryptography]>=3.3",
]

[project.urls]
Homepage = "https://github.com/redshred/django-addons"
Source = "https://github.com/redshred/django-addons"
"Bug Tracker" = "https://github.com/redshred/django-addons/issues"
"Upstream" = "https://github.com/skamansam/django-keycloak"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_keycloak"]

[tool.hatch.build.targets.sdist]
include = [
    "django_keycloak",
    "README.rst",
    "LICENSE",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "keycloak_tests.settings"
python_files = ["test_*.py"]
testpaths = ["keycloak_tests"]
asyncio_mode = "auto"
